feat(wizard): enhance setup wizard layout and styling - Add proper scrolling behavior to wizard content - Fix tab navigation layout to prevent scrolling - Add hover effects to domain provider cards - Make domain provider cards clickable - Improve window sizing and layout - Update branding icon to OneClickTeach - Remove unnecessary border styles - Add proper height constraints for wizard components - Fix tab trigger styling duplication

--- a/components.json
+++ b/components.json
@@ -14,7 +14,8 @@
     "utils": "@/lib/utils",
     "ui": "@/app/components/ui",
     "lib": "@/lib",
-    "hooks": "@/lib/hooks"
+    "hooks": "@/lib/hooks",
+    "constants": "@/app/constants"
   },
   "iconLibrary": "lucide"
 }
