--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.3.0",
     "lucide-react": "^0.511.0",
+    "react-i18next": "^15.5.3",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.2"
   },
@@ -50,6 +52,7 @@
     "@eslint/js": "^9.28.0",
     "@rushstack/eslint-patch": "^1.11.0",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/i18next": "^13.0.0",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
