--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
-name: Release
+name: Build/release Electron app
 
 on:
   push:
     tags:
-      - 'v*.*.*'  # e.g. v1.0.0
+      - v*.*.*
 
 jobs:
   release:
-    name: Build and Release Electron App
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -15,36 +14,43 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Check out Git repository
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: 'pnpm'
+          node-version: 16
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - name: Install Dependencies
+        run: npm install
+
+      - name: build-linux
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run build:linux
+
+      - name: build-mac
+        if: matrix.os == 'macos-latest'
+        run: npm run build:mac
+
+      - name: build-win
+        if: matrix.os == 'windows-latest'
+        run: npm run build:win
+
+      - name: release
+        uses: softprops/action-gh-release@v1
         with:
-          version: 10
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build Electron App
-        run: |
-          if [[ "${{ runner.os }}" == "Linux" ]]; then pnpm build:linux;
-          elif [[ "${{ runner.os }}" == "macOS" ]]; then pnpm build:mac;
-          elif [[ "${{ runner.os }}" == "Windows" ]]; then pnpm build:win;
-          fi
-
-      - name: Publish to GitHub Releases
+          draft: true
+          files: |
+            dist/*.exe
+            dist/*.zip
+            dist/*.dmg
+            dist/*.AppImage
+            dist/*.snap
+            dist/*.deb
+            dist/*.rpm
+            dist/*.tar.gz
+            dist/*.yml
+            dist/*.blockmap
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [[ "${{ runner.os }}" == "Linux" ]]; then pnpm electron-builder --linux --publish always;
-          elif [[ "${{ runner.os }}" == "macOS" ]]; then pnpm electron-builder --mac --publish always;
-          elif [[ "${{ runner.os }}" == "Windows" ]]; then pnpm electron-builder --win --publish always;
-          fi
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
