--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: Build/release Electron app
+
 on:
   push:
     branches:
@@ -6,12 +7,15 @@ on:
   # Comment out the tag trigger temporarily
   # tags:
   #   - v*.*.*
+
 jobs:
   release:
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
@@ -24,8 +28,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
-
+          version: 10
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -46,13 +49,13 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: pnpm run build:linux
 
-      - name: build-mac
-        if: matrix.os == 'macos-latest'
-        run: pnpm run build:mac
+      # - name: build-mac
+      #   if: matrix.os == 'macos-latest'
+      #   run: pnpm run build:mac
 
-      - name: build-win
-        if: matrix.os == 'windows-latest'
-        run: pnpm run build:win
+      # - name: build-win
+      #   if: matrix.os == 'windows-latest'
+      #   run: pnpm run build:win
 
       - name: release
         uses: softprops/action-gh-release@v1
