--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.guasam.era
+appId: ir.oneclickteach.desktop
 productName: OneClickTeachApp
 directories:
   buildResources: resources/build
