--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "build:unpack": "run-s vite:build:app electron:build:dir",
     "build:win": "run-s vite:build:app electron:build:win",
     "build:mac": "run-s vite:build:app electron:build:mac",
-    "build:linux": "run-s vite:build:app electron:build:linux"
+    "build:linux": "run-s vite:build:app electron:build:linux",
+
+    "vite:build:app:dist": "electron-vite build --outDir=dist",
+    "electron:forge:package": "electron-forge package",
+    "electron:forge:make": "electron-forge make",
+    "package": "run-s vite:build:app:dist electron:forge:package",
+    "make": "run-s vite:build:app:dist electron:forge:make"
   },
   "repository": {
     "type": "git",
@@ -47,6 +53,11 @@
     "tw-animate-css": "^1.3.2"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.28.0",
