--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Check out Git repository
@@ -49,13 +50,13 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: pnpm run build:linux
 
-      # - name: build-mac
-      #   if: matrix.os == 'macos-latest'
-      #   run: pnpm run build:mac
+      - name: build-mac
+        if: matrix.os == 'macos-latest'
+        run: pnpm run build:mac
 
-      # - name: build-win
-      #   if: matrix.os == 'windows-latest'
-      #   run: pnpm run build:win
+      - name: build-win
+        if: matrix.os == 'windows-latest'
+        run: pnpm run build:win
 
       - name: release
         uses: softprops/action-gh-release@v1
