--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,12 @@ name: Build/release Electron app
 
 on:
   push:
-    branches:
-      - main  # or whatever branch you're working on
-  # Comment out the tag trigger temporarily
-  # tags:
-  #   - v*.*.*
+    tags:
+      - v*.*.*
 
 jobs:
   release:
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
         # os: [ubuntu-latest, macos-latest, windows-latest]
@@ -30,6 +26,7 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 10
+
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -58,6 +55,10 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: pnpm run build:win
 
+      - name: List built files (for debugging)
+        run: ls -la dist/
+
+      # Only create release when triggered by a tag
       - name: release
         uses: softprops/action-gh-release@v1
         with:
