--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,15 +64,15 @@ jobs:
         with:
           draft: true
           files: |
-            dist/*.exe
-            dist/*.zip
-            dist/*.dmg
             dist/*.AppImage
             dist/*.snap
             dist/*.deb
             dist/*.rpm
             dist/*.tar.gz
             dist/*.yml
-            dist/*.blockmap
+          # dist/*.zip
+          # dist/*.exe
+          # dist/*.dmg
+          # dist/*.blockmap
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
