--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,39 +21,23 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
-        run: pnpm run build:linux
+        run: npm run build:linux
+        env:
+          # Skip snap store publishing
+          ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES: true
 
       - name: build-mac
         if: matrix.os == 'macos-latest'
-        run: pnpm run build:mac
+        run: npm run build:mac
 
       - name: build-win
         if: matrix.os == 'windows-latest'
-        run: pnpm run build:win
+        run: npm run build:win
 
       - name: List built files (for debugging)
         run: ls -la dist/
@@ -70,9 +54,9 @@ jobs:
             dist/*.rpm
             dist/*.tar.gz
             dist/*.yml
-          # dist/*.zip
-          # dist/*.exe
-          # dist/*.dmg
-          # dist/*.blockmap
+            # dist/*.exe
+            # dist/*.zip
+            # dist/*.dmg
+            # dist/*.blockmap
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
