--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -31,8 +31,8 @@ dmg:
 linux:
   target:
     - AppImage
-    - snap
     - deb
+    # - snap
   maintainer: electronjs.org
   category: Utility
 appImage:
