--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   contents: write
+  packages: write
+  issues: write
 
 jobs:
   release:
@@ -44,7 +46,8 @@ jobs:
       - name: List built files (for debugging)
         run: ls -la dist/
 
-      - name: release
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v1
         with:
           draft: true
