--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build/release Electron app
+name: Build/release OneClickTeach Application
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 permissions:
   contents: write
   packages: write
-  issues: write
+  id-token: write
 
 jobs:
   release:
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -48,20 +48,17 @@ jobs:
 
       - name: Release
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           draft: true
           files: |
             dist/*.AppImage
             dist/*.deb
+            dist/*.yml
+            dist/*.exe
         # dist/*.rpm
         # dist/*.tar.gz
-        # dist/*.yml
         # dist/*.snap
-        # dist/*.exe
         # dist/*.zip
         # dist/*.dmg
         # dist/*.blockmap
-
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
