--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,15 +47,14 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
-          draft: true
           files: |
             dist/*.AppImage
             dist/*.deb
             dist/*.yml
             dist/*.exe
-        # dist/*.rpm
-        # dist/*.tar.gz
-        # dist/*.snap
-        # dist/*.zip
-        # dist/*.dmg
-        # dist/*.blockmap
+            dist/*.rpm
+            dist/*.tar.gz
+            dist/*.snap
+            dist/*.zip
+            dist/*.dmg
+            dist/*.blockmap
