--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,8 @@ name: Build/release OneClickTeach Application
 on:
   push:
     tags:
-      - v*.*.*
+      - v*.*.*       # stable releases
+      - v*.*.*-*     # prereleases (e.g., v1.0.0-beta, v1.0.0-rc.1)
 
 permissions:
   contents: write
@@ -42,9 +43,17 @@ jobs:
       - name: build-win
         if: matrix.os == 'windows-latest'
         run: npm run build:win
+      
+      - name: Pre-release
+        if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')
+        uses: softprops/action-gh-release@v2
+        with:
+          prerelease: true
+          files: |
+            dist/*
 
       - name: Release
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')
         uses: softprops/action-gh-release@v2
         with:
           files: |
