--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,27 +22,33 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
+      
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install --frozen-lockfile
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
-        run: npm run build:linux
+        run: pnpm run build:linux
 
       - name: build-mac
         if: matrix.os == 'macos-latest'
-        run: npm run build:mac
+        run: pnpm run build:mac
 
       - name: build-win
         if: matrix.os == 'windows-latest'
-        run: npm run build:win
-      
+        run: pnpm run build:win
+
       - name: Pre-release
         if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')
         uses: softprops/action-gh-release@v2
