--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ejs": "^3.1.10",
     "i18next": "^25.3.0",
     "lucide-react": "^0.511.0",
     "react-i18next": "^15.5.3",
@@ -62,6 +63,7 @@
     "@eslint/js": "^9.28.0",
     "@rushstack/eslint-patch": "^1.11.0",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/ejs": "^3.1.5",
     "@types/i18next": "^13.0.0",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
