--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "lucide-react": "^0.511.0",
     "react-i18next": "^15.5.3",
     "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.2"
+    "tw-animate-css": "^1.3.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
